// Copyright (c) 2013, Cloudera, inc.
// Confidential Cloudera Information: Covered by NDA.
package kudu.tserver;

import "kudu/common/common.proto";
import "kudu/common/wire_protocol.proto";
import "kudu/tserver/remote_bootstrap.proto";
import "kudu/tserver/tserver.proto";

service TabletServerService {

  rpc Ping(PingRequestPB) returns (PingResponsePB);
  rpc Write(WriteRequestPB) returns (WriteResponsePB);
  rpc Scan(ScanRequestPB) returns (ScanResponsePB);
  rpc ListTablets(ListTabletsRequestPB) returns (ListTabletsResponsePB);

  // TODO: Remove once we have multi-service support in RPC. Duplicates RemoteBootstrapService.
  rpc BeginRemoteBootstrapSession(BeginRemoteBootstrapSessionRequestPB)
      returns (BeginRemoteBootstrapSessionResponsePB);

  rpc CheckSessionActive(CheckRemoteBootstrapSessionActiveRequestPB)
      returns (CheckRemoteBootstrapSessionActiveResponsePB);

  rpc FetchData(FetchDataRequestPB)
      returns (FetchDataResponsePB);

  rpc EndRemoteBootstrapSession(EndRemoteBootstrapSessionRequestPB)
      returns (EndRemoteBootstrapSessionResponsePB);
}
